--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -323,6 +323,10 @@ div.position-0 {
 
 /****************** CONTENT ******************/
 
+#content .field {
+	position: relative;
+}
+
 .documentDescription {
 	margin-top: 3em;
 }
@@ -519,6 +523,9 @@ table.listing tbody th {
 
 
 /* tags */
+#category {
+    text-align: left;
+}
 #category a.link-category:hover {
     background: #2c67cd;
 }
@@ -901,8 +908,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 /**** Collections ****/
 
-.portaltype-collection h1#parent-fieldname-title,
-.portaltype-collection h1.documentFirstHeading {
+.template-summary_view h1#parent-fieldname-title,
+.template-summary_view h1.documentFirstHeading {
      color: #2c67cd;
      font-size: 2.4em;
      font-weight: bold;
@@ -912,14 +919,14 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     text-transform: uppercase;
 }
 
-.portaltype-collection .tileItem {
+.template-summary_view .tileItem {
     border-bottom: 1px solid #D3D3D3;
 	 position: relative;
 	 padding-left: 18%;
 	 min-height: 120px;
 }
 
-.portaltype-collection h2.tileHeadline {
+.template-summary_view h2.tileHeadline {
     margin-bottom:0;
     font-size: 1.2em;
     font-weight: normal;
@@ -927,20 +934,20 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     text-transform: uppercase;
 }
 
-.portaltype-collection h2.tileHeadline a.summary {
+.template-summary_view h2.tileHeadline a.summary {
     color: #2C67CD !Important;
     font-size: 0.8em;
 }
 
-.portaltype-collection .tileImage {
+.template-summary_view .tileImage {
 	 margin: 0 1em 0.5em 0 !important;
 	 float: none;
 }
 
-.portaltype-collection .tileImage img {
+.template-summary_view .tileImage img {
 	 float: left !important;
 }
-.portaltype-collection #content .tileItem .documentByLine {
+.template-summary_view #content .tileItem .documentByLine {
     border-right: 1px dotted #D6D6D6;
     color: #7A8692;
     display: inline;
@@ -954,25 +961,25 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     width: 15%;
 }
 
-.portaltype-collection #content .description {
+.template-summary_view #content .description {
     color:#666666;
 	font-size: 1.1em;
 }
 
-.portaltype-collection #content .tileBody {
+.template-summary_view #content .tileBody {
 	margin-bottom: 0;	
 }
 
-.portaltype-collection #content .tileBody .description {
+.template-summary_view #content .tileBody .description {
     color: #000000;
     font-size: 1.3em;
 }
 
-.portaltype-collection #content .tileFooter a {
+.template-summary_view #content .tileFooter a {
 color: #7A8692;
 }
 
-.portaltype-collection #content .tileItem .documentByLine span {display:none;}
+.template-summary_view #content .tileItem .documentByLine span {display:none;}
 
 
 div.listingBar a:link,
