--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -867,16 +867,21 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 .outstanding-header {
 	border-bottom: 1px solid #CCCCCC;
 	margin-bottom: 5px;
-	min-height: 40px;
+	border-top-color: #172838;
 }
 
-.outstanding-header h2.outstanding-title {
+.outstanding-header .outstanding-title {
 	color: #2C67CD;
     font-size: 1.7em;
-    font-weight: bold;
+    font-weight: normal;
     padding: 7px 0;
-    text-transform: uppercase;
+    margin-left: 0 !important;
+    padding-left: 0.3em;
 }
+.outstanding-header h1 {font-size: 1.7em; text-transform: uppercase; font-weight: bold;}
+.outstanding-header h2 {font-size: 2em;}
+.outstanding-header h3 {font-size: 1.5em;}
+.outstanding-header h4 {font-size: 1.3em;}
 
 .outstanding-header .outstanding-link {  
     display: block;
@@ -894,26 +899,28 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 
-.roxo .outstanding-header {background:#eeeff1;border-top:4px solid #5b1285;}
-.roxo .outstanding-header h2.outstanding-title {font-size:2em;text-transform: none;font-weight: normal;color:#5b1285;}
+.roxo .outstanding-header {background:#eeeff1;border-top:4px solid #5b1285; border-bottom: none;}
+.roxo .outstanding-header .outstanding-title {color:#5b1285; background:#eeeff1;}
 .roxo .outstanding-header .outstanding-link {background: url("../img/readmorepurple.png") no-repeat scroll right 5px transparent;}
 
 
-.verde .outstanding-header {background:#eeeff1;border-top:4px solid #01971c;}
-.verde .outstanding-header h2.outstanding-title {font-size:2em;text-transform: none;font-weight: normal;color:#01971c;}
+.verde .outstanding-header {background:#eeeff1;border-top:4px solid #01971c; border-bottom: none;}
+.verde .outstanding-header .outstanding-title {color:#01971c; background:#eeeff1;}
 .verde .outstanding-header .outstanding-link {background: url("../img/readmoregreen.png") no-repeat scroll right 5px transparent;}
 
-.azul-claro .outstanding-header {background:#eeeff1;border-top:4px solid #018bb9;}
-.azul-claro .outstanding-header h2.outstanding-title {font-size:2em;text-transform: none;font-weight: normal;color:#018bb9;}
+
+/* azul claro */
+.azul-claro .outstanding-header {border-top:4px solid #018bb9; border-bottom: none;}
+.azul-claro .outstanding-header .outstanding-title {color:#018bb9; background:#eeeff1;}
 .azul-claro .outstanding-header .outstanding-link {background: url("../img/readmoreblue.png") no-repeat scroll right 5px transparent;}
 
-.laranja .outstanding-header {background:#eeeff1;border-top:4px solid #d25501;}
-.laranja .outstanding-header h2.outstanding-title {font-size:2em;text-transform: none;font-weight: normal;color:#d25501;}
+.laranja .outstanding-header {background:#eeeff1;border-top:4px solid #d25501; border-bottom: none;}
+.laranja .outstanding-header .outstanding-title {color:#d25501; background:#eeeff1;}
 .laranja .outstanding-header .outstanding-link {background: url("../img/readmoreorange.png") no-repeat scroll right 5px transparent;}
 
 
-.bege .outstanding-header {background:#eeeff1;border-top:4px solid #ad6500;}
-.bege .outstanding-header h2.outstanding-title {font-size:2em;text-transform: none;font-weight: normal;color:#ad6500;}
+.bege .outstanding-header {background:#eeeff1;border-top:4px solid #ad6500; border-bottom: none;}
+.bege .outstanding-header .outstanding-title {color:#ad6500; background:#eeeff1;}
 .bege .outstanding-header .outstanding-link {background: url("../img/readmorebrown.png") no-repeat scroll right 5px transparent;}
 
 
