Mais ajustes de estilos do tile Header

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -865,9 +865,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 /*Tile Header*/
 
 .outstanding-header {
-	border-bottom: 1px solid #CCCCCC;
 	margin-bottom: 5px;
-	border-top-color: #172838;
+	border-top: 1px solid #172838;
 }
 
 .outstanding-header .outstanding-title {
@@ -877,6 +876,8 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     padding: 7px 0;
     margin-left: 0 !important;
     padding-left: 0.3em;
+    border-top: 3px solid #172838;
+    border-bottom: 1px solid #CCCCCC;
 }
 .outstanding-header h1 {font-size: 1.7em; text-transform: uppercase; font-weight: bold;}
 .outstanding-header h2 {font-size: 2em;}
@@ -899,28 +900,28 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 
-.roxo .outstanding-header {background:#eeeff1;border-top:4px solid #5b1285; border-bottom: none;}
-.roxo .outstanding-header .outstanding-title {color:#5b1285; background:#eeeff1;}
+.roxo .outstanding-header {background:#eeeff1;border-top:3px solid #5b1285;}
+.roxo .outstanding-header .outstanding-title {border-color: #5b1285;color:#5b1285; background:#eeeff1; border-bottom: none;}
 .roxo .outstanding-header .outstanding-link {background: url("../img/readmorepurple.png") no-repeat scroll right 5px transparent;}
 
 
-.verde .outstanding-header {background:#eeeff1;border-top:4px solid #01971c; border-bottom: none;}
-.verde .outstanding-header .outstanding-title {color:#01971c; background:#eeeff1;}
+.verde .outstanding-header {background:#eeeff1;border-top:3px solid #01971c;}
+.verde .outstanding-header .outstanding-title {border-color:#01971c; color:#01971c; background:#eeeff1; border-bottom: none;}
 .verde .outstanding-header .outstanding-link {background: url("../img/readmoregreen.png") no-repeat scroll right 5px transparent;}
 
 
 /* azul claro */
-.azul-claro .outstanding-header {border-top:4px solid #018bb9; border-bottom: none;}
-.azul-claro .outstanding-header .outstanding-title {color:#018bb9; background:#eeeff1;}
+.azul-claro .outstanding-header {border-top:3px solid #018bb9; }
+.azul-claro .outstanding-header .outstanding-title {border-color:#018bb9;color:#018bb9; background:#eeeff1;border-bottom: none;}
 .azul-claro .outstanding-header .outstanding-link {background: url("../img/readmoreblue.png") no-repeat scroll right 5px transparent;}
 
-.laranja .outstanding-header {background:#eeeff1;border-top:4px solid #d25501; border-bottom: none;}
-.laranja .outstanding-header .outstanding-title {color:#d25501; background:#eeeff1;}
+.laranja .outstanding-header {background:#eeeff1;border-top:3px solid #d25501;}
+.laranja .outstanding-header .outstanding-title {border-color: #d25501; color:#d25501; background:#eeeff1; border-bottom: none;}
 .laranja .outstanding-header .outstanding-link {background: url("../img/readmoreorange.png") no-repeat scroll right 5px transparent;}
 
 
-.bege .outstanding-header {background:#eeeff1;border-top:4px solid #ad6500; border-bottom: none;}
-.bege .outstanding-header .outstanding-title {color:#ad6500; background:#eeeff1;}
+.bege .outstanding-header {background:#eeeff1;border-top:3px solid #ad6500;}
+.bege .outstanding-header .outstanding-title {border-color: #ad6500;color:#ad6500; background:#eeeff1; border-bottom: none;}
 .bege .outstanding-header .outstanding-link {background: url("../img/readmorebrown.png") no-repeat scroll right 5px transparent;}
 
 
