Ajusta o atalho para a busca

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -285,6 +285,11 @@ div.position-0 {
 
 /* Searchbox */
 
+
+input.searchField {
+    -moz-appearance: none;
+}
+
 #portal-searchbox {
     clear: right !important;
     float: right;
