--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -974,7 +974,10 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 /**** Collections ****/
 
 .template-summary_view h1#parent-fieldname-title,
-.template-summary_view h1.documentFirstHeading {
+.template-summary_view h1.documentFirstHeading,
+.template-folder_summary_view h1#parent-fieldname-title,
+.template-folder_summary_view h1.documentFirstHeading
+ {
      color: #2c67cd;
      font-size: 2.4em;
      font-weight: bold;
@@ -984,14 +987,16 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     text-transform: uppercase;
 }
 
-.template-summary_view .tileItem {
+.template-summary_view .tileItem,
+.template-folder_summary_view .tileItem {
     border-bottom: 1px solid #D3D3D3;
 	 position: relative;
 	 padding-left: 18%;
 	 min-height: 120px;
 }
 
-.template-summary_view h2.tileHeadline {
+.template-summary_view h2.tileHeadline,
+.template-folder_summary_view h2.tileHeadline {
     margin-bottom:0;
     font-size: 1.2em;
     font-weight: normal;
@@ -999,20 +1004,24 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     text-transform: uppercase;
 }
 
-.template-summary_view h2.tileHeadline a.summary {
+.template-summary_view h2.tileHeadline a.summary,
+.template-folder_summary_view h2.tileHeadline a.summary  {
     color: #2C67CD !Important;
     font-size: 0.8em;
 }
 
-.template-summary_view .tileImage {
+.template-summary_view .tileImage,
+.template-folder_summary_view .tileImage {
 	 margin: 0 1em 0.5em 0 !important;
 	 float: none;
 }
 
-.template-summary_view .tileImage img {
+.template-summary_view .tileImage img,
+.template-folder_summary_view .tileImage img {
 	 float: left !important;
 }
-.template-summary_view #content .tileItem .documentByLine {
+.template-summary_view #content .tileItem .documentByLine,
+.template-folder_summary_view #content .tileItem .documentByLine {
     border-right: 1px dotted #D6D6D6;
     color: #7A8692;
     display: inline;
@@ -1026,25 +1035,30 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
     width: 15%;
 }
 
-.template-summary_view #content .description {
+.template-summary_view #content .description,
+.template-folder_summary_view #content .description {
     color:#666666;
 	font-size: 1.1em;
 }
 
-.template-summary_view #content .tileBody {
+.template-summary_view #content .tileBody,
+.template-folder_summary_view #content .tileBody {
 	margin-bottom: 0;	
 }
 
-.template-summary_view #content .tileBody .description {
+.template-summary_view #content .tileBody .description,
+.template-folder_summary_view #content .tileBody .description {
     color: #000000;
     font-size: 1.3em;
 }
 
-.template-summary_view #content .tileFooter a {
+.template-summary_view #content .tileFooter a,
+.template-folder_summary_view #content .tileFooter a {
 color: #7A8692;
 }
 
-.template-summary_view #content .tileItem .documentByLine span {display:none;}
+.template-summary_view #content .tileItem .documentByLine span,
+.template-folder_summary_view #content .tileItem .documentByLine span {display:none;}
 
 
 div.listingBar a:link,
