ALteraçao nos icones

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1096,7 +1096,7 @@ dl.portlet div.listingBar a:link {
 
 /* sprite de icones */
 .tileItem .documentByLine {
-	background: url(../img/sprite.png) no-repeat -98px -70px;  /* generico, sem icone especifico */
+	background: transparent;  /* generico, sem icone especifico */
 }
 .tile-sc-embedder .documentByLine {
 	background: url(../img/sprite.png) no-repeat 20px -70px;
