Remove breadcrumb na home

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -340,7 +340,9 @@ input.searchField {
 
 /****************** CONTENT ******************/
 
-.portaltype-plone-site #portal-breadcrumbs {
+.portaltype-plone-site #portal-breadcrumbs,
+.section-home #portal-breadcrumbs,
+.site-Plone  #portal-breadcrumbs {
 	display: none;
 }
 
