--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -770,7 +770,7 @@ ul.navTreeLevel6 li a.navTreeItemInPath,
 ul.navTreeLevel6 li a.navTreeCurrentNode {background-position: 44px 12px !important;}
 
 /* deslocamento dos itens */
-dl.portlet ul.navTree li a {padding: 0.2em 1.5em !important;}
+dl.portlet ul.navTree li a {padding: 0.7em 1.5em !important;}
 dl.portlet ul.navTreeLevel1 li a {padding: 0.2em 2em !important;}
 dl.portlet ul.navTreeLevel2 li a {padding: 0.2em 2.5em !important;}
 dl.portlet ul.navTreeLevel3 li a {padding: 0.2em 3em !important;}
@@ -793,7 +793,7 @@ dl.portlet ul.navTreeLevel6 li a {padding: 0.2em 4.5em !important;}
 /* lists */
 
 #content li, dl.portlet li {
-    line-height: 1.5em;
+    line-height: 1.5em !important;
     list-style: square outside;
     margin-bottom: 0.25em;
 }
